fix(Header Alignment): Header content alignment fixed

--- a/member/client/app/routes/transactions/response/response.scss
+++ b/member/client/app/routes/transactions/response/response.scss
@@ -1,6 +1,3 @@
-.no-padder-top {
-  padding-top: 0px !important;
-}
 .p-l-lg {
   padding-left: 15px !important;
 }
